[package]
name = "oxidate"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.0-rc.0"
minifb = "0.28.0"
anyhow = "1.0.100"
crossterm = "0.29.0"
ratatui = "0.29.0"
clap = { version = "4.5.51", features = ["derive"] }

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
lto = true